# catbot

./: .env  Cargo.toml  README.md
.github/workflows/: release.yml
src/: invite.rs  lib.rs  main.rs
src/models/: cat.rs  joke.rs  mod.rs
